<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/full_screen"
        app:showAsAction="always"
        android:title="@string/full_screen"
        android:icon="@mipmap/icon_fullscreen"/>
    
    <item
        android:id="@+id/add_new_paper"
        app:showAsAction="always"
        android:title="@string/add_new_paper"
        android:icon="@mipmap/add_new_paper"/>
    
    <item
        android:id="@+id/save"
        app:showAsAction="always"
        android:title="@string/save_title"
        android:icon="@mipmap/save"/>
    
    <item
        android:id="@+id/undo"
        app:showAsAction="always"
        android:title="@string/undo_title"
        android:icon="@mipmap/undo"/>
    
    <item
        android:id="@+id/paint"
        app:showAsAction="always"
        android:title="@string/paint_title"
        android:icon="@mipmap/paint_setting_black">
        <menu>
            <item
		        android:id="@+id/black"
		        app:showAsAction="ifRoom"
		        android:title="@string/black"
		        android:icon="@mipmap/black"/>
            
            <item
		        android:id="@+id/red"
		        app:showAsAction="ifRoom"
		        android:title="@string/red"
		        android:icon="@mipmap/red"/>
            
            <item
		        android:id="@+id/blue"
		        app:showAsAction="ifRoom"
		        android:title="@string/blue"
		        android:icon="@mipmap/blue"/>

            <item
                android:id="@+id/eraser"
                app:showAsAction="ifRoom"
                android:title="@string/eraser"
                android:icon="@mipmap/icon_eraser"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/clear_all_title"
        app:showAsAction="never"
        android:title="@string/clear_all_title"/>

</menu>
