<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@mipmap/bg_desk_default">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.musketeer.scratchpaper.activity.HelpActivity"
	    android:orientation="vertical" >
	    
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/app_version"
	        android:textSize="@dimen/title_size"
	        android:textColor="@color/white"
	        android:layout_marginBottom="20dp"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
		    android:background="@mipmap/bg_help">
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/use_title"
		        android:textSize="@dimen/title_size"
		        android:layout_marginBottom="20dp"/>
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/use_content"
		        android:textSize="@dimen/subtitle_size" />
		    
	    </LinearLayout>
	
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="20dp"
		    android:background="@mipmap/bg_help">
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/help_title"
		        android:textSize="@dimen/title_size"
		        android:layout_marginBottom="20dp"/>
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/help_content"
		        android:textSize="@dimen/subtitle_size" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="20dp"
		    android:background="@mipmap/bg_help">
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/my_title"
		        android:textSize="@dimen/title_size"
		        android:layout_marginBottom="20dp"/>
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/my_content"
		        android:textSize="@dimen/subtitle_size" />
		    
	    </LinearLayout>
	</LinearLayout>
</ScrollView>
