<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.musketeer.scratchpaper.activity.settings.SettingsActivity"
    android:orientation="vertical"
    android:background="@mipmap/bg_desk_default" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/base_set"
        android:textSize="@dimen/subtitle_size"
        android:textColor="@color/white"
        android:background="@drawable/bg_list_item"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/setting_bg">
        
        <LinearLayout 
			android:id="@+id/paper_size"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:clickable="true"
	        android:background="@drawable/bg_list_item"
	        android:orientation="horizontal">
	        
			<TextView 
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:text="@string/paper_size"
			    android:textSize="@dimen/subtitle_size"
			    android:layout_gravity="center_vertical"/>
			
			<Spinner 
			    android:id="@+id/paper_size_selector"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"/>
	        
	    </LinearLayout>
	    
        <View 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        
        <LinearLayout 
			android:id="@+id/paper_row_number"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:clickable="true"
	        android:background="@drawable/bg_list_item"
	        android:orientation="horizontal">
	        
			<TextView 
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:text="@string/paper_row_number"
			    android:textSize="@dimen/subtitle_size"/>
			
			<TextView 
			    android:id="@+id/paper_row_number_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/subtitle_size"
			    android:padding="12dp"/>
	        
	    </LinearLayout>
        
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/senior_set"
        android:textSize="@dimen/subtitle_size"
        android:textColor="@color/white"
        android:background="@drawable/bg_list_item"/>
    
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/setting_bg">
	    <LinearLayout 
			android:id="@+id/set_max_undo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:clickable="true"
	        android:background="@drawable/bg_list_item"
	        android:orientation="horizontal">
	        
			<TextView 
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:text="@string/set_max_undo"
			    android:textSize="@dimen/subtitle_size"/>
			
			<TextView 
			    android:id="@+id/max_undo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/subtitle_size"/>
	        
	    </LinearLayout>
	</LinearLayout>
	
    <TextView 
	    android:id="@+id/back_to_defalut"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="8dp"
	    android:layout_marginTop="20dp"
	    android:clickable="true"
	    android:text="@string/set_back_defalut"
	    android:textSize="@dimen/subtitle_size"
	    android:background="@drawable/setting_bg"/>
</LinearLayout>
