<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/background_recyclerview_item">
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/ic_edit_black_24dp"
            android:adjustViewBounds="true"
            android:tint="@color/gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_content"
            android:textSize="@dimen/subtitle_size"
            android:padding="10dp"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/background_recyclerview_item">
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:adjustViewBounds="true"
            android:tint="@color/gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/subtitle_size"
            android:padding="10dp"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/background_recyclerview_item">
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/ic_share_black_24dp"
            android:adjustViewBounds="true"
            android:tint="@color/gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="@dimen/subtitle_size"
            android:padding="10dp"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
